# blog_how_use_axum_askama_htmx

./: Cargo.toml  README.md
src/: main.rs
templates/: home.html  root.html
